Added (optional) flagging of changed records

--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
     "OrderingDeck": "The Deck::KLC Important Vocab",
     "SourceDeck": "The Deck::Core 2k/6k Optimized Japanese Vocabulary",
-    "ReloadButtonEnabled": false
+    "ReloadButtonEnabled": false,
+    "Flagging": false
 }
